# HDoujin-Downloader

.github/workflows/: crypto-rebalancer-ci.yml
crypto-rebalancer/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  portfolio.example.yaml  pyproject.toml
crypto-rebalancer/deploy/: README.md  crypto-rebalancer.service
crypto-rebalancer/src/rebalancer/: cli.py  config.py  exchange.py  logging_conf.py  portfolio.py  rebalancer.py  scheduler.py
crypto-rebalancer/tests/: test_config.py  test_exchange.py  test_portfolio.py  test_rebalancer.py
